[package]
name = "term-table"
version = "1.2.0"
authors = ["Ryan Bluth <ryanbluth93@gmail.com>"]
description = "Tables for CLI apps"
license = "MIT"
repository = "https://github.com/RyanBluth/term-table-rs"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["table", "cli", "terminal"]
edition = "2018"

[dependencies]
lazy_static = "1"
regex = "1"
unicode-width = "0.1"